# accera-llvm-canary

./: CMakeLists.txt  Dockerfile  README.md  build.bat  build.dev.sh  build.sh
.github/workflows/: dockerbuild.yml  repro.yml
llvm/: 0001-Merged-PR-2213-mlir-Plumb-OpenMP-dialect-attributes-.patch  0004-fix-install-paths.patch  0004-fix-vcpkg-install-paths.patch  0005-fix-vcpkg-install-paths.patch  portfile.cmake  vcpkg.json
scripts/: get_latest_release.sh  install.buildtools.sh  install.cuda.sh  install.vcpkg.sh
